@@ -14,6 +14,7 @@ Version 1.0.xxx (May xxth 2013)
 - Implemented: Experimental Light Log graph
 - Implemented: IP-Camera setup, and option to send email for light/switch/scene (email setup via application settings)
 - Implemented: Email setup test button
+- Changed: Notification text 'Greater then' changed to 'Greater Than'
 
 Version 1.0.484 (April 28th 2013)
 - Implemented: Raspberry Pi, updating via the web browser (Settings Tab)
